--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/about">Контакты</a>
+            <a href="{{ site.baseurl }}/whoami">Контакты</a>
           </nav>
         </header>
       </div>
