--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/whoami">Контакты</a>
+            <a href="{{ site.baseurl }}/contacts">Контакты</a>
           </nav>
         </header>
       </div>
