--- a/style.scss
+++ b/style.scss
@@ -200,12 +200,16 @@ img {
 }
 
 .site-description {
-  margin: -5px 0 0 0;
+  margin: 0;
   color: $muted;
-  font-size: 16px;
+  font-size: 18px;
+  line-height: 1.2;
   position: relative;
 
-  @include mobile { margin: 3px 0; }
+  @include mobile {
+    margin: 0;
+    font-size: 16px;
+  }
 }
 .site-description:after {
   content: "▌";
