--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="post">
+<article class="post {% if page.url contains 'product-web-pcn6' or page.url contains 'product-bank-card-monitoring' %}post--dim-images{% endif %}">
   <h1>{{ page.title }}</h1>
 
   <div class="entry">
