--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,14 @@ layout: default
 <article class="post {% if page.url contains 'product-web-pcn6' or page.url contains 'product-bank-card-monitoring' %}post--dim-images{% endif %}">
   <h1>{{ page.title }}</h1>
 
+  {% if page.tags %}
+  <div class="post-tags">
+    {% for tag in page.tags %}
+      <span class="tag tag--{{ tag | slugify }}" data-tag="{{ tag }}">{{ tag }}</span>
+    {% endfor %}
+  </div>
+  {% endif %}
+
   <div class="entry">
     {{ content }}
   </div>
