--- a/style.scss
+++ b/style.scss
@@ -279,6 +279,9 @@ nav {
   h1 {
     // Tighter spacing to visually attach tags
     margin: 10px 0 4px; // top > bottom
+    @include mobile {
+      font-size: 21px;
+    }
   }
 
   img {
