--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <article class="post {% if page.url contains 'product-web-pcn6' or page.url contains 'product-bank-card-monitoring' %}post--dim-images{% endif %}">
+  <a href="{{ site.baseurl }}/" class="read-more back">Назад</a>
   <h1>{{ page.title }}</h1>
 
   {% if page.tags %}
@@ -16,6 +17,8 @@ layout: default
   <div class="entry">
     {{ content }}
   </div>
+
+  <a href="{{ site.baseurl }}/" class="read-more back">Назад</a>
 
   {% include disqus.html %}
 </article>
